made a submodule of OsvvmLibraries

--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 	path = SPI_GuyEschemann
 	url = ../SPI_GuyEschemann.git
 	branch = main
+[submodule "Wishbone"]
+	path = Wishbone
+	url = ../Wishbone
