--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -109,15 +109,15 @@ jobs:
           name: log-html-${{ matrix.os.name }}-ghdl-${{ matrix.backend }}
           include-hidden-files: true
           path: |
-            temp/*.log
-            temp/*.html
-            temp/reports/*.html
-            temp/reports/**/*.html
-            temp/logs/**/*.*
-            temp/reports/*.css
-            temp/reports/*.png
-            temp/results/**/*.log
-            temp/results/**/*.txt
+            temp/**/*.log
+            temp/**/*.html
+            temp/**/reports/*.html
+            temp/**/reports/**/*.html
+            temp/**/logs/**/*.*
+            temp/**/reports/*.css
+            temp/**/reports/*.png
+            temp/**/results/**/*.log
+            temp/**/results/**/*.txt
           if-no-files-found: error
           retention-days: 1
 
@@ -127,7 +127,7 @@ jobs:
           name: yaml-${{ matrix.os.name }}-ghdl-${{ matrix.backend }}
           include-hidden-files: true
           path: |
-            temp/*.yml
+            temp/**/*.yml
           if-no-files-found: error
           retention-days: 1
 
@@ -137,7 +137,7 @@ jobs:
           name: xml-${{ matrix.os.name }}-ghdl-${{ matrix.backend }}
           include-hidden-files: true
           path: |
-            temp/*.xml
+            temp/**/*.xml
           if-no-files-found: error
           retention-days: 1
 
@@ -206,15 +206,15 @@ jobs:
           name: log-html-${{ matrix.name }}-nvc
           include-hidden-files: true
           path: |
-            temp/*.log
-            temp/*.html
-            temp/reports/*.html
-            temp/reports/**/*.html
-            temp/logs/**/*.*
-            temp/reports/*.css
-            temp/reports/*.png
-            temp/results/**/*.log
-            temp/results/**/*.txt
+            temp/**/*.log
+            temp/**/*.html
+            temp/**/reports/*.html
+            temp/**/reports/**/*.html
+            temp/**/logs/**/*.*
+            temp/**/reports/*.css
+            temp/**/reports/*.png
+            temp/**/results/**/*.log
+            temp/**/results/**/*.txt
           if-no-files-found: error
           retention-days: 1
 
@@ -224,7 +224,7 @@ jobs:
           name: yaml-${{ matrix.name }}-nvc
           include-hidden-files: true
           path: |
-            temp/*.yml
+            temp/**/*.yml
           if-no-files-found: error
           retention-days: 1
 
@@ -234,7 +234,7 @@ jobs:
           name: xml-${{ matrix.name }}-nvc
           include-hidden-files: true
           path: |
-            temp/*.xml
+            temp/**/*.xml
           if-no-files-found: error
           retention-days: 1
 
