--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -8,35 +8,8 @@ on:
     - cron: '0 15 * * *'
 
 jobs:
-  Variables:
-    name: 💻 Pipeline variables
-    runs-on: ubuntu-24.04
-    outputs:
-      branch: ${{ steps.Variables.outputs.branch }}
-      tag:    ${{ steps.Variables.outputs.tag }}
-    steps:
-      - name: 💻 Compute pipeline variables
-        id: Variables
-        run: |
-          ref="${{ github.ref }}"
-          
-          branch=""
-          tag=""
-          if [[ "${{ startsWith(github.ref, 'refs/heads/') }}" == "true" ]]; then
-            branch="${ref:11}"
-          elif [[ "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
-            tag="${ref:10}"
-          elif [[ "${{ startsWith(github.ref, 'refs/pull/') }}" == "true" ]]; then
-            printf "Detected a pull request.\n"
-          else
-            printf "::error title=%s::%s\n" "Variables" "Unsupported Git reference format: '${ref}'."
-            exit 1
-          fi
-          
-          tee "${GITHUB_OUTPUT}" <<EOF
-          branch=${branch}
-          tag=${tag}
-          EOF
+  Prepare:
+    uses: pyTooling/Actions/.github/workflows/PrepareJob.yml@r6
 
   GHDL:
     name: ${{ matrix.os.icon }}${{ matrix.os.name }} - GHDL ${{ matrix.backend }}
@@ -46,8 +19,8 @@ jobs:
       matrix:
         os:
           - {icon: "🐧",   name: "Ubuntu",  image: "ubuntu-24.04", shell: "bash",      runtime: ""}
-          - {icon: "🍏",   name: "macOS",   image: "macos-14",     shell: "bash",      runtime: ""}       # Wrong float values in generated XML, due to missing elapsed time in YAML files.
-          - {icon: "🪟🟨", name: "Windows", image: "windows-2022", shell: "msys2 {0}", runtime: "ucrt64"}
+          - {icon: "🍏",   name: "macOS",   image: "macos-15",     shell: "bash",      runtime: ""}       # Wrong float values in generated XML, due to missing elapsed time in YAML files.
+          - {icon: "🪟🟨", name: "Windows", image: "windows-2025", shell: "msys2 {0}", runtime: "ucrt64"}
         backend:
           - mcode
           - llvm
@@ -60,7 +33,7 @@ jobs:
 
     steps:
       - name: ⏬ Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           submodules: recursive
 
@@ -149,8 +122,8 @@ jobs:
       matrix:
         include:
           - {icon: "🐧",   name: "Ubuntu",  image: "ubuntu-24.04", shell: "bash"}
-##          - {icon: "🪟",   name: "Windows", image: "windows-2022", shell: "powershell"}    # No TCL environment available. The embedded TCL of NVC doesn't contain tcllib.
-          - {icon: "🪟🟨", name: "Windows", image: "windows-2022", shell: "msys2 {0}"}       # Installation in Windows via MSI, but called from UCRT64.
+##          - {icon: "🪟",   name: "Windows", image: "windows-2025", shell: "powershell"}    # No TCL environment available. The embedded TCL of NVC doesn't contain tcllib.
+          - {icon: "🪟🟨", name: "Windows", image: "windows-2025", shell: "msys2 {0}"}       # Installation in Windows via MSI, but called from UCRT64.
 
     defaults:
       run:
@@ -158,7 +131,7 @@ jobs:
 
     steps:
       - name: ⏬ Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           submodules: recursive
 
@@ -251,10 +224,10 @@ jobs:
 
     steps:
       - name: ⏬ Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: '📥 Download artifact: package'
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v5
         with:
           pattern: xml-*
           path: artifacts
@@ -263,7 +236,7 @@ jobs:
         run: |
           tree artifacts
 
-      - name: 🔧 Install pyEDAA.Reports (JUunit Parser and Merger)
+      - name: 🔧 Install pyEDAA.Reports (JUnit Parser and Merger)
         run: |
           python -m pip install --disable-pip-version-check --break-system-packages -U pyEDAA.Reports
 
@@ -284,7 +257,7 @@ jobs:
           cat Unittesting.xml
 
       - name: 📊 Publish Unit Test Results
-        uses: dorny/test-reporter@v1
+        uses: dorny/test-reporter@v2
         if: ${{ github.event_name != 'pull_request' }}
         with:
           name: OSVVM VC Regression Results
@@ -307,7 +280,7 @@ jobs:
 
     steps:
       - name: ⏬ Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           path: OsvvmLibraries
           submodules: recursive
@@ -332,58 +305,43 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  Release:
-    uses: pyTooling/Actions/.github/workflows/NightlyRelease.yml@dev
+  TriggerTaggedRelease:
+    uses: pyTooling/Actions/.github/workflows/TagReleaseCommit.yml@r6
     needs:
-      - Variables
+      - Prepare
       - Package
       - GHDL
       - NVC
-    if: startsWith(github.ref, 'refs/tags/')
+    if: needs.Prepare.outputs.is_release_commit == 'true' && github.event_name != 'schedule'
+    permissions:
+      contents: write  # required for create tag
+      actions:  write  # required for trigger workflow
+    with:
+      version:  ${{ needs.Prepare.outputs.version }}
+      auto_tag: ${{ needs.Prepare.outputs.is_release_commit }}
     secrets: inherit
+
+  Release:
+    uses: pyTooling/Actions/.github/workflows/PublishReleaseNotes.yml@r6
+    needs:
+      - Prepare
+      - Package
+      - GHDL
+      - NVC
+    if: needs.Prepare.outputs.is_release_tag == 'true'
     permissions:
       contents: write
-      actions: write
-      attestations: write
+      actions:  write
     with:
       replacements: |
-        osvvm=${{ needs.Variables.outputs.tag }}
-      nightly_name: ${{ needs.Variables.outputs.tag }}
-      nightly_description: |
-        This release contains all important artifacts created by OSVVM's CI pipeline.
-
-        # OSVVM %osvvm%
-
-        All Git repositories and submodules have been packaged in a single zip file. This file contains the following
-        OSVVM components.
-
-        ## Core Components
-        * [OSVVM Utility Library](https://github.com/OSVVM/OSVVM)
-        * [OSVVM Model Independent Transactions](https://github.com/OSVVM/OSVVM-Common)
-        
-        ## Verification Components
-        * [AXI4](https://github.com/OSVVM/AXI4)
-        * [CoSim](https://github.com/OSVVM/CoSim)
-        * [DpRam](https://github.com/OSVVM/DpRam)
-        * [Ethernet](https://github.com/OSVVM/Ethernet)
-        * [UART](https://github.com/OSVVM/UART)
-        
-        ## Third-Party Verification Components
-        * [SPI (by Guy Eschemann)](https://github.com/OSVVM/SPI_GuyEschemann)
-        * [VideoBus (by Louis Adriaens)](https://github.com/OSVVM/VideoBus_LouisAdriaens)
-        
-        ## Scripting
-        * [OSVVM Scripts](https://github.com/OSVVM/OSVVM-Scripts)
-        
-        ## Documentation
-        
-        * [Documentation](https://github.com/OSVVM/Documentation)
-        * [Further resources available at OSVVM.org](https://OSVVM.org)
-
-      inventory-json: "inventory.json"
-      inventory-version: ${{ needs.Variables.outputs.tag }}
-      inventory-categories: "kind"
+        osvvm=${{ needs.Prepare.outputs.version }}
+      tag:                  ${{ needs.Prepare.outputs.version }}
+      description_file:     '.github/ReleaseDescription.md'
+      inventory-json:       'inventory.json'
+      inventory-version:    ${{ needs.Prepare.outputs.version }}
+      inventory-categories: 'kind'
       assets: |
         osvvm: !OsvvmLibraries-%osvvm%.zip:     osvvm,zip:  OsvvmLibraries - %osvvm% - all-in-one (ZIP)
         osvvm: $OsvvmLibraries-%osvvm%.tar.gz:  osvvm,tgz:  OsvvmLibraries - %osvvm% - all-in-one (TAR/GZ)
         osvvm: $OsvvmLibraries-%osvvm%.tar.zst: osvvm,tzst: OsvvmLibraries - %osvvm% - all-in-one (TAR/ZST)
+    secrets: inherit
